[metadata]
name = ansible-role-tripleo-octavia
summary = ansible-role-tripleo-octavia - Ansible octavia role for the TripleO project.
description-file =
    README.md
author = TripleO Team
author-email = jillr@redhat.com
home-page = https://git.openstack.org/cgit/openstack/ansible-role-tripleo-octavia
classifier =
  License :: OSI Approved :: Apache Software License
  Development Status :: 4 - Beta
  Intended Audience :: Developers
  Intended Audience :: System Administrators
  Intended Audience :: Information Technology
  Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/roles/tripleo-octavia/defaults = defaults/*
    share/ansible/roles/tripleo-octavia/meta = meta/*
    share/ansible/roles/tripleo-octavia/tasks = tasks/*
    share/ansible/roles/tripleo-octavia/templates = templates/*
    share/ansible/roles/tripleo-octavia/files = files/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True

